tests/baselines/reference/assignmentCompatability22.errors.txt
==== tests/cases/compiler/assignmentCompatability22.ts (1 errors) ====
    module __test1__ {
        export interface interfaceWithPublicAndOptional<T,U> { one: T; two?: U; };  var obj4: interfaceWithPublicAndOptional<number,string> = { one: 1 };;
        export var __val__obj4 = obj4;
    }
    module __test2__ {
        export var obj = {one: [true]};
        export var __val__obj = obj;
    }
    __test2__.__val__obj = __test1__.__val__obj4
    ~~~~~~~~~~~~~~~~~~~~
!!! assignmentCompatability22.ts(9,1): error TS2012: Cannot convert '__test1__.interfaceWithPublicAndOptional<number, string>' to '{ one: boolean[]; }':
!!! 	Types of property 'one' of types '__test1__.interfaceWithPublicAndOptional<number, string>' and '{ one: boolean[]; }' are incompatible:
!!! 		Type 'Number' is missing property 'concat' from type 'boolean[]'.